--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,20 @@
 *.egg-info
 *.swp
 tags
-lms/docs/current
-lms/public/dist
 __pycache__/
 *.py[cod]
 *$py.class
 node_modules
 package-lock.json
-lms/public/frontend
-lms/www/lms.html
-frappe-ui
+yarn-error.log
+
+# Built assets (should be generated during build)
+wg_lms/public/frontend
+wg_lms/public/dist
+wg_lms/www/lms.html
+
+# Development files
+cypress/
+docker/
+.github/
+*.log
